--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2137,7 +2137,7 @@ button,
     flex-shrink: 0;
     display: block;
     margin: 0 0 2em 4em;
-    width: 50%; }
+    width: 40%; }
     #banner .image img {
       height: 100%;
       -moz-object-fit: cover;
@@ -2148,7 +2148,8 @@ button,
       -webkit-object-position: center;
       -ms-object-position: center;
       object-position: center;
-      width: 100%; }
+      width: 100%;
+    margin-top:-25px; }
   @media screen and (orientation: portrait) {
     #banner {
       -moz-flex-direction: column-reverse;
