--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2332,7 +2332,8 @@ button,
 
     #hndResultsImage,
     #diplomaResultsImage,
-    #MERNCertificateImage {
+    #MERNCertificateImage,
+    #DegreeImage {
         display: none; /* Initially hide the images */
         max-width: 100%; /* Ensure image doesn't exceed container width */
         height: auto; /* Maintain aspect ratio */
